# sgj2021

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  setup.cfg
DataDumper/: DataDumper.py  data_dumper.py
GameData/: GameData.json
sgj/: __init__.py  __main__.py  events_deck.py  game_manager.py
sgj/graphics/: card_sprite.py  constants.py  game_view.py  select_card_controller.py  select_card_sprite.py  start_view.py  window.py
sgj/graphics/entity/Dude/: dude.py
sgj/graphics/entity/card/: sprite.py
sgj/graphics/entity/news/: news.py
sgj/graphics/entity/select/: controller.py  sprite.py
sgj/graphics/entity/stats/: angry.py  energy.py  fatum.py  volume.py
sgj/sounds/: sounds.py
