[tool.poetry]
name = "sgj"
version = "0.0.1"
description = "Siberian Game Jam 2021"
authors = ["Alexander Lavrov <internal@egnod.dev>"]
maintainers = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.6.3"
tinydb = "^4.5.2"
gspread = "^4.0.1"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"
yesqa = "^1.2.3"
pre-commit = "^2.11.0"
wemake-python-styleguide = "^0.15.3"
black = "==21.7b0"
autoflake = "^1.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
nest-asyncio = "^1.5.1"
pytest-env = "^0.6.2"
requests = "^2.26.0"
bump2version = "^1.0.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["sgj",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
